--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "preview": "comando_para_previsualizar"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -13,8 +14,9 @@
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
-    "vue": "^3.2.13",
-    "vuetify": "^3.5.14",
+    "vue": "^3.4.26",
+    "vue-router": "^4.3.2",
+    "vuetify": "^3.6.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
