--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Build Jekyll site
         uses: actions/jekyll-build-pages@v1
         with:
-          source: .
+          source: src.
           destination: _site
